Changed pod-tato-head picture and style

--- a/hello-server/overview.html
+++ b/hello-server/overview.html
@@ -6,7 +6,7 @@
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">  
-        <main role="main" class="inner cover" style="margin-top: 200px;">
+        <main role="main" class="inner cover">
             <img src="./static/podTatoHead.png" />   
             <h1 class="cover-heading">Hello from <i>pod</i> tato head</h1>
             <p> Version {{.Version}} </p>
