--- a/podtato-server/podtato-new.html
+++ b/podtato-server/podtato-new.html
@@ -4,17 +4,22 @@
     <link rel="stylesheet" href="./static/styles.css"/>
     <link rel="stylesheet" href="./static/custom.css"/>   
   </head>
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">  
-        <main role="main" class="inner cover center">
-            <img src="./static/images/body.svg" style="position:absolute;top:100px;left:100px;">
-            <img src="./static/images/hats/hat-01.svg" style="position:absolute;left:100px;">
-            <img src="./static/images/left-arm/left-arm-01.svg" style="position:absolute;top:100px;left:-150px;">
-            <img src="./static/images/right-arm/right-arm-02.svg" style="position:absolute;top:100px;left:350px;"> 
-            <img src="./static/images/left-leg/left-leg-01.svg" style="position:absolute;top:500px;left:-100px;" >
-            <img src="./static/images/right-leg/right-leg-01.svg" style="position:absolute;top:500px;left:300px;">                          
-        </main> 
-        <p> Version {{.Version}} </p>   
+  <body style="background-color: #849abd;color: antiquewhite;">
+  <main class="container">
+
+  <div class="text-center">
+    <h1>Hello from Podtato Head</h1>
+    <div style="width:700px;height:850px;margin:auto;position:relative;">
+      <img src="./static/images/body.svg" style="position:absolute;margin-top:80px;margin-left:200px;">
+      <img src="./static/images/hats/hat-01.svg" style="position:absolute;margin-left:200px;margin-top:0px;"> 
+      <img src="./static/images/left-arm/left-arm-01.svg" style="position:absolute;top:100px;left:-50px;">
+      <img src="./static/images/right-arm/right-arm-02.svg" style="position:absolute;top:100px;left:450px;"> 
+      <img src="./static/images/left-leg/left-leg-01.svg" style="position:absolute;top:480px;left: -0px;" >
+      <img src="./static/images/right-leg/right-leg-01.svg" style="position:absolute;top:480px;left: 400px;">           
     </div>
-  </body>
+    <p class="lead"> Version {{.Version}} </p>
+  </div>
+
+</main><!-- /.container -->  
+</body>
 </html>
