--- a/podtato-server/podtato-new.html
+++ b/podtato-server/podtato-new.html
@@ -9,7 +9,7 @@
 
   <div class="text-center">
     <h1>Hello from Podtato Head</h1>
-    <div style="width:700px;height:850px;margin:auto;position:relative;">
+    <div style="width:700px;height:800px;margin:auto;position:relative;">
       <img src="./static/images/body.svg" style="position:absolute;margin-top:80px;margin-left:200px;">
       <img src="./static/images/hats/hat-01.svg" style="position:absolute;margin-left:200px;margin-top:0px;"> 
       <img src="./static/images/left-arm/left-arm-01.svg" style="position:absolute;top:100px;left:-50px;">
@@ -17,7 +17,7 @@
       <img src="./static/images/left-leg/left-leg-01.svg" style="position:absolute;top:480px;left: -0px;" >
       <img src="./static/images/right-leg/right-leg-01.svg" style="position:absolute;top:480px;left: 400px;">           
     </div>
-    <p class="lead"> Version {{.Version}} </p>
+    <h2> Version {{.Version}} </h2>
   </div>
 
 </main><!-- /.container -->  
