feat(components): Added more configurable components for the future

--- a/podtato-server/static/overview.html
+++ b/podtato-server/static/overview.html
@@ -9,7 +9,7 @@
         <main role="main" class="inner cover">
             <img src="podTatoHead.png" />
             <h1 class="cover-heading">Hello from <i>pod</i> tato head</h1>
-            <p> Version {{.Version}} </p>
+            <p> Version {{.ServiceVersion}} </p>
         </main>    
     </div>
   </body>
