--- a/podtato-server/static/podtato-new.html
+++ b/podtato-server/static/podtato-new.html
@@ -11,13 +11,13 @@
     <h1>Hello from Podtato Head</h1>
     <div style="width:700px;height:800px;margin:auto;position:relative;">
       <img src="./static/images/body.svg" style="position:absolute;margin-top:80px;margin-left:200px;">
-      <img src="./static/images/hats/hat-{{.PartId}}.svg" style="position:absolute;margin-left:200px;margin-top:0px;">
-      <img src="./static/images/left-arm/left-arm-{{.PartId}}.svg" style="position:absolute;top:100px;left:-50px;">
-      <img src="./static/images/right-arm/right-arm-{{.PartId}}.svg" style="position:absolute;top:100px;left:450px;">
-      <img src="./static/images/left-leg/left-leg-{{.PartId}}.svg" style="position:absolute;top:480px;left: -0px;" >
-      <img src="./static/images/right-leg/right-leg-{{.PartId}}.svg" style="position:absolute;top:480px;left: 400px;">
+      <img src="./static/images/hats/hat-{{.Components.BodyHats.Id}}.svg" style="position:absolute;margin-left:200px;margin-top:0px;">
+      <img src="./static/images/left-arm/left-arm-{{.Components.LeftArm.Id}}.svg" style="position:absolute;top:100px;left:-50px;">
+      <img src="./static/images/right-arm/right-arm-{{.Components.RightArm.Id}}.svg" style="position:absolute;top:100px;left:450px;">
+      <img src="./static/images/left-leg/left-leg-{{.Components.LeftLeg.Id}}.svg" style="position:absolute;top:480px;left: -0px;" >
+      <img src="./static/images/right-leg/right-leg-{{.Components.RightLeg.Id}}.svg" style="position:absolute;top:480px;left: 400px;">
     </div>
-    <h2> Version {{.Version}} </h2>
+    <h2> Version {{.ServiceVersion}} </h2>
   </div>
 
 </main><!-- /.container -->  
